--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,10 @@
             <div class="glass__iconNFC"></div>
         </div>
         <div class="wave__wrap">
-            <div id="wave"></div>
+            <div id="wave">
+                <div class="wave_up"></div>
+                <div class="wave_down"></div>
+            </div>
         </div>
     </div>
 </div>
