--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 
 <div class="wave__container">
     <div class="wave__card">
+        <div class="wave__inset"></div>
         <div class="glass">
             <div class="glass__bankName">&#8383; CryptoBank</div>
             <div class="glass__cardNumber">6644 &nbsp;6446 &nbsp;4466 &nbsp;4646</div>
