--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
             <div class="glass__userName">Ivanov Ivan</div>
             <div class="glass__iconBank"></div>
             <div class="glass__iconNFC"></div>
+            <div class="glass__chip"></div>
         </div>
         <div class="wave__wrap">
             <div id="wave">
