--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,19 @@
             </div>
         </div>
     </div>
+
+    <ul class="coins">
+        <li class="eth1"><img src="img/dest/eth1.webp" alt="coins"></li>
+        <li class="btc1"><img src="img/dest/btc1.webp" alt="coins"></li>
+        <li class="dog"><img src="img/dest/dog.webp" alt="coins"></li>
+        <li class="xrp"><img src="img/dest/xrp.webp" alt="coins"></li>
+        <li class="z-cash"><img src="img/dest/z-cash.webp" alt="coins"></li>
+        <li class="z-cash1"><img src="img/dest/z-cash1.webp" alt="coins"></li>
+        <li class="btc5"><img src="img/dest/btc5.webp" alt="coins"></li>
+        <li class="ada"><img src="img/dest/ada.webp" alt="coins"></li>
+        <li class="eth7"><img src="img/dest/eth7.webp" alt="coins"></li>
+    </ul>
+
 </div>
 <script src="js/app.min.js?ver=0.0.0"></script>
 </body>
